# srpc

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/client/: mod.rs
src/codec/: mod.rs
src/error/: mod.rs
src/macros/: mod.rs
src/server/: mod.rs  remote_call.rs  thread_pool.rs
srpc_macros/: Cargo.toml
srpc_macros/src/: lib.rs
