[workspace]
resolver = "2"
members = [
  "srpc_macros",
]

[package]
name = "srpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.113"
srpc_macros = { path = "./srpc_macros", version = "0.1.0" }
